--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="assets/processing-opengl.jar"/>
-	<classpathentry kind="lib" path="assets/jogl.jar"/>
-	<classpathentry kind="lib" path="assets/processing-core.jar"/>
+	<classpathentry kind="lib" path="dependencies/jogl.jar"/>
+	<classpathentry kind="lib" path="dependencies/processing-core.jar"/>
+	<classpathentry kind="lib" path="dependencies/processing-opengl.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
