--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@
 	<!-- path to the sketch folder -->
 	<property name="sketch.path" value="${user.home}/Documents/Processing" />
 	
-	<property name="version" value="0.98" />
+	<property name="version" value="0.98.1" />
 	<fileset id="cp" includes="dependencies/*.jar" />
 	<path id="cp">
 		<fileset dir="." includes="dependencies/*.jar" />
@@ -55,7 +55,7 @@
 				 windowtitle="Javadocs: Fullscreen API">
 			<link href="http://java.sun.com/javase/6/docs/api" />
 			<link href="http://dev.processing.org/reference/everything/javadoc/" />
-			<fileset dir="src" includes="fullscreen/**/*.java" />
+			<fileset dir="src" includes="fullscreen/**/*.java" excludes="fullscreen/tests/**" />
 		</javadoc>
 	</target>
 		
@@ -81,7 +81,7 @@
 		</copy>
 		
 		<!-- create the jar files and copy them over -->
-		<jar destfile="fullscreen/library/fullscreen.jar" basedir="bin" includes="fullscreen/**" />
+		<jar destfile="fullscreen/library/fullscreen.jar" basedir="bin" includes="fullscreen/**" excludes="fullscreen/tests/**" />
 		
 		<!-- done, zip it up! -->
 		<zip destfile="dist/fullscreen.zip">
