--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="dependencies/junit-4.7.jar"/>
 	<classpathentry kind="lib" path="dependencies/core.jar"/>
-	<classpathentry kind="lib" path="dependencies/opengl/jogl.jar"/>
+	<classpathentry kind="lib" path="dependencies/opengl/jogl.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://download.java.net/media/jogl/builds/archive/jsr-231-beta1/javadoc_public/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="dependencies/opengl/opengl.jar"/>
 	<classpathentry kind="lib" path="dependencies/opengl/gluegen-rt.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
