--- a/build.xml
+++ b/build.xml
@@ -24,9 +24,9 @@
 	<property name="sketch.path" value="${user.home}/Documents/Processing" />
 	
 	<property name="version" value="0.99-future" />
-	<fileset id="cp" includes="dependencies/*.jar" />
+	<fileset id="cp" includes="dependencies/**/*.jar" />
 	<path id="cp">
-		<fileset dir="." includes="dependencies/*.jar" />
+		<fileset dir="." includes="dependencies/**/*.jar" />
 	</path>
 	
 	<!-- empty the binary folder -->
@@ -45,8 +45,8 @@
 	
 	<!-- create the reference -->
 	<target name="reference" depends="compile" description="generate reference">
-		<javadoc bottom="processing fullscreen api library by hansi, 2009. " 
-				 classpath="dependencies/processing-core.jar; bin" 
+		<javadoc bottom="processing fullscreen api library by hansi, 2009. "
+				 classpathref="cp"
 				 destdir="reference" 
 				 verbose="false" 
 				 stylesheetfile="dependencies/stylesheet.css" 
@@ -81,7 +81,8 @@
 		</copy>
 		
 		<!-- create the jar files and copy them over -->
-		<jar destfile="fullscreen/library/fullscreen.jar" basedir="bin" includes="fullscreen/** japplemenubar/**" excludes="fullscreen/tests/**" />
+		<jar destfile="fullscreen/library/fullscreen.jar" basedir="bin" includes="fullscreen/*.class" />
+		<jar destfile="fullscreen/library/fullscreen_support.jar" basedir="bin" includes="fullscreen/** japplemenubar/**" excludes="fullscreen/tests/** fullscreen/*.class" />
 		
 		<!-- done, zip it up! -->
 		<zip destfile="dist/fullscreen.zip">
